@@ -11,7 +11,7 @@ LDADD = ./libfakes.a $(testable_library)
 
 TESTS = $(check_PROGRAMS) $(test_suites)
 
-nobase_pkginclude_HEADERS= *.h implement/*.h
+nobase_noinst_HEADERS= *.h implement/*.h
 
 EXTRA_DIST = $(test_suites) *.bat Makefile.Windows MakefileEclipse.linux *.mcp win32-check-all.bat
 
